welcome.lessons.welcome.bat.bool2.CigarParty.scala.error
cigarParty:2: error: not found: value isWeekEnd
  return (isWeekend && cigars >= 40 && cigars <= 60) || (!isWeekEnd && cigars >= 40)
                                                          ^