welcome.lessons.welcome.bat.bool2.CigarParty.scala.code
def cigarParty(cigars:Int, isWeekend:Boolean):Boolean = {
  return (isWeekend && cigars >= 40 && cigars <= 60) || (!isWeekEnd && cigars >= 40)
}